tests/parsing/extra_space_at_line_end/stderr.golden
error: extra space at line end
bus.fbd +1:9
   |
 1 | Main bus 
   |         ^
